# slirp-slip-server

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
assets/: diagram.puml
src/: CMakeLists.txt  ISlirpClient.h  PipeConnection.cpp  PipeConnection.h  PipeServer.cpp  PipeServer.h  SlirpServer.cpp  SlirpServer.h  main.cpp
